feat(tools): 添加工具面板与选区功能支持
- 新增工具面板（Tools Panel）及其 UI 集成
- 实现基础工具接口 FormacraftTool，支持空间语义输入
- 添加 SelectionTool 用于世界选区操作
- 支持通过鼠标左键在世界中设置选区点
- 工具系统与 UI 输入路由整合，防止误触游戏行为
- 添加操作距离设置项（interactionReach），控制光标交互范围
- 优化光标射线检测逻辑，兼容高 DPI 显示与动态 FOV
- 增加工具 Tab 标签及多语言支持（中/英文）
- 调整世界选区框渲染效果，使用彩虹呼吸色增强视觉反馈
- 修复标签栏按钮区域计算偏差，统一高度处理逻辑
- 完善设置面板交互距离滑块及相关配置持久化逻辑
- 更新 BuildConfirmPanel 点击事件处理流程
- 重构部分 UI panel 代码以适配新工具系统结构
- 添加 GameRendererAccessor 以获取准确 FOV 值
- 引入 SelectionBoxRenderMixin 实现自定义选区框绘制
- 修改 HistoryPanel 使用 addFirst/removeLast 提升性能
- 调整 CursorRaycastHelper 缓存命中结果供工具复用
- 修正 TabBar 绘制高度一致性问题
- 移除 BuildConfirmPanel 多余返回语句，简化逻辑
- 更新语言文件，补充新增词条翻译内容